# solar-controller

./: .gitignore  CLAUDE.md
.cargo/: config.toml
.claude/commands/: deploy.md
backend/: Cargo.toml
backend/migrations/: 001_init.sql
backend/src/: auto.rs  db.rs  history.rs  main.rs  recorder.rs  relay.rs  routes.rs  sensors.rs  state.rs  ups.rs  watchdog.rs  weather.rs
deploy/: deploy.py  deploy.sh  solar-controller.service
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  history.ts  index.css
frontend/src/components/: AutoControl.tsx  Bar.tsx  NetworkBadge.tsx  RangeSelector.tsx  SensorCard.tsx  Sparkline.tsx  StatusPill.tsx  SwitchButton.tsx  UpsCard.tsx  VoltageTrend.tsx
